fix(cart): edit cart_item model