@@ -1,8 +1,5 @@
 package com.kampus.kbazaar.cart;
 
-import com.kampus.kbazaar.exceptions.NotFoundException;
-import com.kampus.kbazaar.product.Product;
-import com.kampus.kbazaar.product.ProductRepository;
 import com.kampus.kbazaar.product.ProductResponse;
 import com.kampus.kbazaar.product.ProductService;
 
@@ -11,7 +8,7 @@ import org.springframework.stereotype.Service;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 public class CartService {
@@ -31,7 +28,7 @@ public class CartService {
 
         List<CartResponse> cartResponseList = new ArrayList<>();
         for (Cart cart : cartRepository.findAll()) {
-            List<CartItemResponse> cartItems = cartItemRepository.findByUsername(cart.getUsername()).stream().map(CartItem::toResponse).toList();
+            List<CartItemResponse> cartItems = cartItemRepository.findByUsername(cart.getUsername()).orElse(new ArrayList<>()).stream().map(CartItem::toResponse).collect(Collectors.toList());
             CartResponse cartResponse = new CartResponse(cart.getUsername(), cartItems, cart.getDiscount(), cart.getTotalDiscount(), cart.getSubtotal(), cart.getGrandTotal());
             cartResponseList.add(cartResponse);
         }
@@ -40,7 +37,7 @@ public class CartService {
 
     public CartResponse addProduct(CartRequest request){
         ProductResponse productResponse = productService.getBySku(request.productSku());
-    return null;
+        return null;
     }
 
 }
